<resources>
    <string name="app_name">Fufinity Display</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your name</string>
    <string name="nav_header_subtitle">info@fufinity.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="action_send">发送</string>
    <string name="label_type_in">请输入</string>
    <string name="template_title">标题</string>
    <string name="template_address">地址</string>
    <string name="template_rssi">RSSI</string>
    <string name="todo">TODO</string>
    <string name="discover_my_ble">发现我的设备</string>
    <string name="connected_device_list">已连接设备: %s</string>
    <string name="discovered_device_list">已发现设备: %s</string>
    <string name="zero">0</string>
    <string name="refresh">刷新</string>
    <string name="unknown_device">未知设备</string>
    <string name="stop">停止</string>
    <string name="connecting">正在连接设备</string>
    <string name="disconnect">断开连接</string>
    <string name="service_not_found">Service not found</string>
    <string name="connected">Connected</string>
    <string name="characteristic_not_found">Characteristic not found</string>
    <string name="descriptor_not_found">Descriptor not found</string>
    <string name="test_string">一二三四五六七八九十甲乙丙丁</string>
    <string name="sending">正在发送中</string>
</resources>
