<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/item_selector"
    android:padding="@dimen/activity_vertical_margin"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".9"
        >
        <TextView
            android:id="@+id/discovered_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/template_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/discovered_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_extra_small"
                android:text="@string/template_address"
                android:layout_weight=".4"
                />

            <TextView
                android:id="@+id/discovered_rssi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_extra_small"
                android:text="@string/template_rssi"
                android:layout_weight=".6"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:padding="0dp"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
    </LinearLayout>
</LinearLayout>
